Implement validation loop

--- a/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
+++ b/intro-to-pytorch/Part 5 - Inference and Validation (Exercises).ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,23 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1],\n",
-      "        [ 1]])\n"
+      "tensor([[0],\n",
+      "        [0],\n",
+      "        [0],\n",
+      "        [0],\n",
+      "        [2],\n",
+      "        [0],\n",
+      "        [0],\n",
+      "        [0],\n",
+      "        [0],\n",
+      "        [0]])\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 7.8125%\n"
+      "Accuracy: 12.5%\n"
      ]
     }
    ],
@@ -213,9 +213,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 100.0%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 81.25%\n",
+      "Accuracy: 81.25%\n",
+      "Accuracy: 81.25%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 68.75%\n",
+      "Accuracy: 62.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 81.25%\n",
+      "Accuracy: 93.75%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 81.25%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 100.0%\n",
+      "Accuracy: 87.5%\n",
+      "Accuracy: 68.75%\n"
+     ]
+    }
+   ],
    "source": [
     "model = Classifier()\n",
     "criterion = nn.NLLLoss()\n",
@@ -240,6 +277,13 @@
     "        \n",
     "    else:\n",
     "        ## TODO: Implement the validation pass and print out the validation accuracy\n",
+    "        with torch.no_grad():\n",
+    "            for images, labels in testloader:\n",
+    "                ps = torch.exp(model(images))\n",
+    "                _, top_class = ps.topk(1, dim=1)\n",
+    "                equals = top_class == labels.view(*top_class.shape)\n",
+    "                accuracy = torch.mean(equals.type(torch.FloatTensor))\n",
+    "                \n",
     "        print(f'Accuracy: {accuracy.item()*100}%')"
    ]
   },
@@ -408,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
